--- a/res/Makefile
+++ b/res/Makefile
@@ -23,31 +23,11 @@ ifeq ($(OSARCH),FreeBSD)
   SELECTED_MODS:=$(filter-out $(shell if test ${BSDVERSION} -lt 500000 ; then echo "res_config_odbc"; fi),$(SELECTED_MODS))
 endif
 
-# NETsnmp has some difficulties on some platforms (conflict with unload_module)
-# Until we figure out if the collission is version-specific or what to do
-# we have disabled res_snmp on OS/X and *BSD
-ifeq ($(OSARCH),Darwin)
-  SELECTED_MODS:=$(filter-out res_snmp,$(SELECTED_MODS))
-else
-  ifeq ($(findstring BSD,$(OSARCH)),BSD)
-    SELECTED_MODS:=$(filter-out res_snmp,$(SELECTED_MODS))
-  endif
-endif
-
-ifeq ($(wildcard $(CROSS_COMPILE_TARGET)/usr/include/net-snmp/net-snmp-config.h),)
-  SELECTED_MODS:=$(filter-out res_snmp,$(SELECTED_MODS))
-else
-  SNMP_LDLIBS+=$(shell net-snmp-config --agent-libs)
-endif
-
 MODS:=$(patsubst %,%.so,$(SELECTED_MODS))
 
 all: $(MODS)
 
 install: all
-	rm -f $(DESTDIR)$(ASTHEADERDIR)/parking.h
-	rm -f $(DESTDIR)$(MODULES_DIR)/app_agi.so 
-	rm -f $(DESTDIR)$(MODULES_DIR)/res_parking.so
 	for x in $(MODS); do ($(INSTALL) -m 755 $$x $(DESTDIR)$(MODULES_DIR);echo Installing $$x) ; done
 	@if [ x`which mpg123 2>/dev/null | grep -v '^no'` != x ] ; then \
 	  if mpg123 --longhelp 2>&1 | grep -q .59r 2>&1 >/dev/null ; then echo ; else \
@@ -74,6 +54,7 @@ clean-depend:
 
 clean: clean-depend
 	rm -f *.so *.o
+	rm -f snmp/*.o
 
 res_odbc.so: res_odbc.o
 	$(CC) $(SOLINK) -o $@ $< $(ODBC_LIB) 
@@ -100,7 +81,7 @@ res_config_odbc.o: res_config_odbc.c
 	$(CC) -c -o $@ $(CFLAGS) $(ODBC_INCLUDE) $<
 
 res_snmp.so: res_snmp.o snmp/agent.o
-	$(CC) $(SOLINK) $(SNMP_LDFLAGS) -o $@ $< snmp/agent.o $(SNMP_LDLIBS)
+	$(CC) $(SOLINK) -o $@ $< snmp/agent.o $(NETSNMP_LIBS)
 
 res_config_pgsql.so: res_config_pgsql.o
 	$(CC) $(SOLINK) -o $@ $< $(PGSQL_LIB)
