--- a/makeopts.in
+++ b/makeopts.in
@@ -32,6 +32,9 @@ PROC=@HOST_CPU@
 OSARCH=@HOST_OS@
 OSREV=@PBX_OSREV@
 
+GC_CFLAGS=@GC_CFLAGS@
+GC_LDFLAGS=@GC_LDFLAGS@
+
 prefix = @prefix@
 exec_prefix = @exec_prefix@
 
@@ -53,7 +56,8 @@ AST_DEVMODE=@AST_DEVMODE@
 ASOUND_INCLUDE=@ALSA_INCLUDE@
 ASOUND_LIB=@ALSA_LIB@
 
-CURL_LIB=@CURLLIB@
+CURL_INCLUDE=@CURL_INCLUDE@
+CURL_LIB=@CURL_LIB@
 
 CURSES_INCLUDE=@CURSES_INCLUDE@
 CURSES_LIB=@CURSES_LIB@
