--- a/include/asterisk/autoconfig.h.in
+++ b/include/asterisk/autoconfig.h.in
@@ -3,9 +3,7 @@
 #ifndef ASTERISK_AUTOCONFIG_H
 #define ASTERISK_AUTOCONFIG_H
 
-#ifndef MENUSELECT
 #include "asterisk/buildopts.h"
-#endif
 
 #ifndef _REENTRANT
 #define _REENTRANT
@@ -269,6 +267,10 @@
 
 /* Define to 1 if you have the `rint' function. */
 #undef HAVE_RINT
+
+/* Define to 1 if your system has a dynamic linker that supports RTLD_NOLOAD.
+   */
+#undef HAVE_RTLD_NOLOAD
 
 /* Define to 1 if you have the `select' function. */
 #undef HAVE_SELECT
