Oops. Utils gives problems on OS/x (muted) and I can't seem to disable it in menuselect
git-svn-id: https://origsvn.digium.com/svn/asterisk/team/oej/iaxtrunkfix-1.4@44784 65c4cc65-6c06-0410-ace0-fbb531ad65f3

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -13,7 +13,7 @@
 
 .PHONY: clean clean-depend all depend uninstall
 
-#ALL_UTILS:=astman smsq stereorize streamplayer aelparse muted
+ALL_UTILS:=astman smsq stereorize streamplayer aelparse muted
 UTILS:=$(ALL_UTILS)
 
 include $(ASTTOPDIR)/Makefile.rules
