Updates. Poking around. Having fun.
git-svn-id: https://origsvn.digium.com/svn/asterisk/team/oej/codename-pineapple@44898 65c4cc65-6c06-0410-ace0-fbb531ad65f3

--- a/channels/sip3/Makefile
+++ b/channels/sip3/Makefile
@@ -1,7 +1,7 @@
 #
 # Makefile for chan_sip3 support
 #
-all: sip3_test.o
+all: sip3_refer.o sip3_subscribe.o sip3_network.o
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c -o $@ $<
