Chopping, cutting, fixing.
git-svn-id: https://origsvn.digium.com/svn/asterisk/team/oej/codename-pineapple@44899 65c4cc65-6c06-0410-ace0-fbb531ad65f3

--- a/channels/Makefile
+++ b/channels/Makefile
@@ -13,6 +13,8 @@
 
 C_MODS:=$(filter-out $(MENUSELECT_CHANNELS),$(patsubst %.c,%,$(wildcard chan_*.c)))
 CC_MODS:=$(filter-out $(MENUSELECT_CHANNELS),$(patsubst %.cc,%,$(wildcard chan_*.cc)))
+SIP3_MODULES=chan_sip3.o sip3/sip3_network.o sip3/sip3_subscribe.o sip3/sip3_refer.o sip3/sip3_domain.o \
+	sip3/sip3_callerid.o sip3/sip3_auth.o
 
 ifeq ($(OSARCH),OpenBSD)
   PTLIB=-lpt_OpenBSD_x86_r
@@ -117,6 +119,6 @@ $(if $(filter chan_misdn,$(EMBEDDED_MODS)),modules.link,chan_misdn.so): chan_mis
 sip3:	
 	$(MAKE) -C sip3 
 
-chan_sip3.so: chan_sip3.o sip3/sip3_network.o sip3/sip3_subscribe.o sip3/sip3_refer.o
+chan_sip3.so: $(SIP3_MODULES)
 	$(ECHO_PREFIX) echo "   [LD] $^ -> $@"
 	$(CMD_PREFIX) $(CXX) $(SOLINK) -o $@ $< 
