Fixing linking, even though I think I cause environmental damage by polluting the name space outside of the SIP3 channel.
What's a GNURK by the way? :-)


git-svn-id: https://origsvn.digium.com/svn/asterisk/team/oej/codename-pineapple@45258 65c4cc65-6c06-0410-ace0-fbb531ad65f3

--- a/channels/Makefile
+++ b/channels/Makefile
@@ -14,7 +14,7 @@
 C_MODS:=$(filter-out $(MENUSELECT_CHANNELS),$(patsubst %.c,%,$(wildcard chan_*.c)))
 CC_MODS:=$(filter-out $(MENUSELECT_CHANNELS),$(patsubst %.cc,%,$(wildcard chan_*.cc)))
 SIP3_MODULES=chan_sip3.o sip3/sip3_network.o sip3/sip3_subscribe.o sip3/sip3_refer.o sip3/sip3_domain.o \
-	sip3/sip3_callerid.o sip3/sip3_auth.o
+	sip3/sip3_callerid.o sip3/sip3_auth.o sip3/sip3_sdprtp.c
 
 ifeq ($(OSARCH),OpenBSD)
   PTLIB=-lpt_OpenBSD_x86_r
