Ooops. Where did that user go?
- Well, we can compile cleanly again.
- Starting to define states for dialogs and transactions
- Need to update to trunk, include Luigi's  auth fixes
- New file for dialog stuff


git-svn-id: https://origsvn.digium.com/svn/asterisk/team/oej/codename-pineapple@46373 65c4cc65-6c06-0410-ace0-fbb531ad65f3

--- a/channels/sip3/Makefile
+++ b/channels/sip3/Makefile
@@ -2,9 +2,9 @@
 # Makefile for chan_sip3 support
 #
 all: sip3_refer.o sip3_subscribe.o sip3_network.o sip3_domain.o sip3_callerid.o sip3_auth.o \
-	sip3_sdprtp.o sip3_config.o sip3_cliami.c
+	sip3_sdprtp.o sip3_config.o sip3_cliami.c sip3_dialog.c
 
-%.o: %.c sip3_funcs.h sip3.h
+%.o: %.c sip3funcs.h sip3.h
 	$(CC) $(CFLAGS) -c -o $@ $<
 
 clean: 
