--- a/configs/sip3.conf.sample
+++ b/configs/sip3.conf.sample
@@ -420,7 +420,7 @@ srvlookup=yes			; Enable DNS SRV lookups on outbound calls
 ; videosupport
 ; maxcallbitrate
 ; mailbox
-; username
+; defaultuser
 ; template
 ; fromdomain
 ; regexten
@@ -446,7 +446,7 @@ srvlookup=yes			; Enable DNS SRV lookups on outbound calls
 ;[sip_proxy-out]
 ;type=device          			; we only want to call out, not be called
 ;secret=guessit
-;username=yourusername			; Authentication user for outbound proxies
+;defaultuser=yourusername		; Authentication user for outbound proxies
 ;fromuser=yourusername			; Many SIP providers require this!
 ;fromdomain=provider.sip.domain	
 ;host=box.provider.com
@@ -541,7 +541,7 @@ srvlookup=yes			; Enable DNS SRV lookups on outbound calls
 ;secret=blahpoly
 ;host=dynamic			; This peer register with us
 ;dtmfmode=rfc2833		; Choices are inband, rfc2833, or info
-;username=polly			; Username to use in INVITE until peer registers
+;defaultuser=polly		; Username to use in INVITE until peer registers
 				; Normally you do NOT need to set this parameter
 ;disallow=all
 ;allow=ulaw                     ; dtmfmode=inband only works with ulaw or alaw!
@@ -582,7 +582,7 @@ srvlookup=yes			; Enable DNS SRV lookups on outbound calls
 				; support this (especially if one of them is 
 				; behind a NAT).
 ;defaultip=192.168.0.4		; IP address to use until registration
-;username=goran			; Username to use when calling this device before registration
+;defaultuser=goran		; Username to use when calling this device before registration
 				; Normally you do NOT need to set this parameter
 ;setvar=CUSTID=5678		; Channel variable to be set for all calls from this device
 
