Moving around stuff
git-svn-id: https://origsvn.digium.com/svn/asterisk/team/oej/codename-pineapple@47624 65c4cc65-6c06-0410-ace0-fbb531ad65f3

--- a/channels/sip3/Makefile
+++ b/channels/sip3/Makefile
@@ -3,7 +3,7 @@
 #
 all: sip3_refer.o sip3_subscribe.o sip3_network.o sip3_domain.o sip3_callerid.o sip3_auth.o \
 	sip3_sdprtp.o sip3_config.o sip3_cliami.o sip3_dialog.o sip3_services.o \
-	sip3_compose.o sip3_parse.o sip3_utils.o
+	sip3_compose.o sip3_parse.o sip3_utils.o sip3_pokedevice.o
 
 %.o: %.c sip3funcs.h sip3.h
 	$(CC) $(CFLAGS) -c -o $@ $<
