--- a/main/Makefile
+++ b/main/Makefile
@@ -140,7 +140,7 @@ asterisk: $(OBJS) editline/libedit.a db1-ast/libdb1.a $(AST_EMBED_LDSCRIPTS)
 
 clean::
 	rm -f asterisk
-	rm -f .depend
+	rm -f db1-ast/.*.d
 	@if [ -f editline/Makefile ]; then $(MAKE) -C editline distclean ; fi
 	@$(MAKE) -C db1-ast clean
 	@$(MAKE) -C stdtime clean
