--- a/configs/sip.conf.sample
+++ b/configs/sip.conf.sample
@@ -70,6 +70,9 @@ srvlookup=yes			; Enable DNS SRV lookups on outbound calls
 				; Defaults to 100 ms
 ;notifymimetype=text/plain	; Allow overriding of mime type in MWI NOTIFY
 ;checkmwi=10			; Default time between mailbox checks for peers
+;buggymwi=no			; Cisco SIP firmware doesn't support the MWI RFC
+				; fully. Enable this option to not get error messages
+				; when sending MWI to phones with this bug.
 ;vmexten=voicemail		; dialplan extension to reach mailbox sets the 
 				; Message-Account in the MWI notify message 
 				; defaults to "asterisk"
@@ -102,6 +105,9 @@ srvlookup=yes			; Enable DNS SRV lookups on outbound calls
 				; where some buggy devices might not render it
 				; Valid values: yes, no, never Default: never
 ;useragent=Asterisk PBX		; Allows you to change the user agent string
+				; The default user agent string also contains the Asterisk
+				; version. If you don't want to expose this, change the
+				; useragent string.
 ;promiscredir = no      	; If yes, allows 302 or REDIR to non-local SIP address
 	                       	; Note that promiscredir when redirects are made to the
        	                	; local system will cause loops since Asterisk is incapable
